--- a/5th Sem/AJP/Programs/Assignment 1/.classpath
+++ b/5th Sem/AJP/Programs/Assignment 1/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/Vijaykumar R Pai.LAPTOP-C26T1P75/Downloads/Compressed/mysql-connector-java-8.0.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
