--- a/5thSem/BD/Programs/WordCount/.classpath
+++ b/5thSem/BD/Programs/WordCount/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-common-2.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-core-2.9.1.jar"/>
+	<classpathentry kind="lib" path="C:/BigData/hadoop-2.9.1/share/hadoop/tools/sources/hadoop-streaming-2.9.1-sources.jar"/>
+	<classpathentry kind="lib" path="C:/BigData/hadoop-2.9.1/share/hadoop/tools/sources/hadoop-streaming-2.9.1-test-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
